--- a/ui/dashboard-admin.html
+++ b/ui/dashboard-admin.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>StoreManager - Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
