--- a/ui/dashboard-attendant.html
+++ b/ui/dashboard-attendant.html
@@ -2,9 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>StoreManager - Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<!--# NAVIGATION BAR-->
+<div class="nav-container">
+    <div class="nav-logo"><img src="images/shopping-list.png"></div>
+    <div class="nav-logo-text">STORE MANAGER</div>
+    <div class="nav-menu">
+        <!--<div class="nav-menu-item">Profile</div>-->
+        <!--<div class="nav-menu-item">Records</div>-->
+        <button type="submit">PROFILE</button>
+        <button type="submit">LOG OUT</button>
+    </div>
+</div>
 
+<!--# MAIN SECTION-->
+<div class="main-section">
+    <div class="dashboard-section">
+        <div class="dash-header">Dashboard | Store Attendant</div>
+        <div class="dash-components">
+            <div class="dash-component">
+                <div class="dash-component-icon"><img src="images/shopping-bag.png"></div>
+                <div class="dash-component-title">Products</div>
+                <div class="dash-component-help">View and add Products to Shopping Cart.</div>
+            </div>
+            <!--<div class="dash-component">-->
+                <!--<div class="dash-component-icon"><img src="images/employee.png"></div>-->
+                <!--<div class="dash-component-title">Store Attendants</div>-->
+                <!--<div class="dash-component-help">Manage Store Attendants.</div>-->
+            <!--</div>-->
+            <div class="dash-component">
+                <div class="dash-component-icon"><img src="images/sale-report.png"></div>
+                <div class="dash-component-title">Records</div>
+                <div class="dash-component-help">View My Sales Records.</div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!--#FOOTER-->
+<div class="footer-content login-section footer-section">
+    <footer>
+        &copy; Copyright 2018 Store Manager
+    </footer>
+</div>
 </body>
 </html>
