[Feature #161103014] Add Shopping Cart option to Dashboard

--- a/ui/dashboard-attendant.html
+++ b/ui/dashboard-attendant.html
@@ -29,11 +29,11 @@
                 <div class="dash-component-title">Products</div>
                 <div class="dash-component-help">View and add Products to Shopping Cart.</div>
             </div>
-            <!--<div class="dash-component">-->
-                <!--<div class="dash-component-icon"><img src="images/employee.png"></div>-->
-                <!--<div class="dash-component-title">Store Attendants</div>-->
-                <!--<div class="dash-component-help">Manage Store Attendants.</div>-->
-            <!--</div>-->
+            <div class="dash-component">
+                <div class="dash-component-icon"><img src="images/shopping-cart.png"></div>
+                <div class="dash-component-title">Shopping Cart</div>
+                <div class="dash-component-help">View and modify products in Shopping Cart.</div>
+            </div>
             <div class="dash-component">
                 <div class="dash-component-icon"><img src="images/sale-report.png"></div>
                 <div class="dash-component-title">Records</div>
