[Feature #161078894] Add Attendant Name to Record view

--- a/ui/sale-record-detail.html
+++ b/ui/sale-record-detail.html
@@ -61,6 +61,7 @@
         <div class="single-record-extra">
             <div> Total Items: 8</div>
             <div> Total Cost: 115000</div>
+            <div> Attendant: John Quest</div>
         </div>
     </div>
     <div class="my-side-bar">
