[Feature #161078815] Add attendant details field to sales record items

--- a/ui/sale-records-all.html
+++ b/ui/sale-records-all.html
@@ -29,6 +29,7 @@
                         <div class="product-price">Total Cost: 115000</div>
                         <div class="product-price">Total Items: 3</div>
                         <div class="product-price">Date: 30-12-2018</div>
+                        <div class="product-price">Attendant: John Quest</div>
                     </div>
                 </div>
             </div>
@@ -38,7 +39,41 @@
                     <div class="record-details-extra">
                         <div class="product-price">Total Cost: 115000</div>
                         <div class="product-price">Total Items: 3</div>
-                        <div class="product-price">Date: 30-12-2018</div>
+                        <div class="product-price">Date: 25-10-2018</div>
+                        <div class="product-price">Attendant: John Quest</div>
+                    </div>
+                </div>
+            </div>
+            <div class="record-item">
+                <div class="record-details">
+                    <div class="record-name">Sale Record ID</div>
+                    <div class="record-details-extra">
+                        <div class="product-price">Total Cost: 5000</div>
+                        <div class="product-price">Total Items: 1</div>
+                        <div class="product-price">Date: 14-10-2018</div>
+                        <div class="product-price">Attendant: John Quest</div>
+                    </div>
+                </div>
+            </div>
+            <div class="record-item">
+                <div class="record-details">
+                    <div class="record-name">Sale Record ID</div>
+                    <div class="record-details-extra">
+                        <div class="product-price">Total Cost: 45000</div>
+                        <div class="product-price">Total Items: 4</div>
+                        <div class="product-price">Date: 10-10-2018</div>
+                        <div class="product-price">Attendant: John Quest</div>
+                    </div>
+                </div>
+            </div>
+            <div class="record-item">
+                <div class="record-details">
+                    <div class="record-name">Sale Record ID</div>
+                    <div class="record-details-extra">
+                        <div class="product-price">Total Cost: 35000</div>
+                        <div class="product-price">Total Items: 2</div>
+                        <div class="product-price">Date: 30-09-2018</div>
+                        <div class="product-price">Attendant: John Quest</div>
                     </div>
                 </div>
             </div>
@@ -48,57 +83,8 @@
                     <div class="record-details-extra">
                         <div class="product-price">Total Cost: 115000</div>
                         <div class="product-price">Total Items: 3</div>
-                        <div class="product-price">Date: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item">
-                <div class="record-details">
-                    <div class="record-name">Sale Record ID</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">Total Cost: 115000</div>
-                        <div class="product-price">Total Items: 3</div>
-                        <div class="product-price">Date: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item">
-                <div class="record-details">
-                    <div class="record-name">Sale Record ID</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">Total Cost: 115000</div>
-                        <div class="product-price">Total Items: 3</div>
-                        <div class="product-price">Date: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item">
-                <div class="record-details">
-                    <div class="record-name">Sale Record ID</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">Total Cost: 115000</div>
-                        <div class="product-price">Total Items: 3</div>
-                        <div class="product-price">Date: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item">
-                <div class="record-details">
-                    <div class="record-name">Sale Record ID</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">Total Cost: 115000</div>
-                        <div class="product-price">Total Items: 3</div>
-                        <div class="product-price">Date: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item">
-                <div class="record-details">
-                    <div class="record-name">Sale Record ID</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">Total Cost: 115000</div>
-                        <div class="product-price">Total Items: 3</div>
-                        <div class="product-price">Date: 30-12-2018</div>
+                        <div class="product-price">Date: 08-09-2018</div>
+                        <div class="product-price">Attendant: John Quest</div>
                     </div>
                 </div>
             </div>
