[Feature #161078894] Add date field to sale record view

--- a/ui/sale-record-detail.html
+++ b/ui/sale-record-detail.html
@@ -62,6 +62,7 @@
             <div> Total Items: 8</div>
             <div> Total Cost: 115000</div>
             <div> Attendant: John Quest</div>
+            <div> Date: 25-10-2018</div>
         </div>
     </div>
     <div class="my-side-bar">
