[Feature #161145157] Updated Profile page background

--- a/ui/attendant-profile.html
+++ b/ui/attendant-profile.html
@@ -20,7 +20,7 @@
 
 <!--# MAIN SECTION-->
 <div class="main-section">
-    <div class="single-record-section">
+    <div class="single-record-section attendant-section">
         <div class="single-record-table">
             <div class="attendant-profile">
                 <img src="images/user-lg.png">
