--- a/ui/products.html
+++ b/ui/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>StoreManager - Home</title>
+    <title>StoreManager - Products</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
@@ -13,8 +13,6 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <!--<div class="nav-menu-item">Profile</div>-->
-        <!--<div class="nav-menu-item">Records</div>-->
         <button type="submit">PROFILE</button>
         <button type="submit">LOG OUT</button>
     </div>
@@ -24,6 +22,14 @@
 <div class="main-section">
     <div class="products-section">
         <div class="dash-header">Products</div>
+        <div class="search-bar-section">
+            <div class="my-search-input">
+                <input type="text" placeholder="Search For Product By Name..">
+            </div>
+            <div>
+                <button type="submit" class="my-search-button">Search</button>
+            </div>
+        </div>
         <div class="all-products-section">
             <div class="product-item">
                 <div class="product-image"><img src="images/shopping.png"></div>
