[Feature #161078698] Add Admin Login Option

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
 <!--# MAIN SECTION-->
 <div class="main-section login-section">
     <div class="form-section">
-        <div class="form-header">Log In</div>
+        <div class="form-header">Welcome, Log In</div>
         <div class="my-form">
             <form action="#">
                 <div class="container">
@@ -25,7 +25,8 @@
                     <input type="text" placeholder="Enter Username" id="username" required>
                     <label for="password" class="my-form-extra">Password</label>
                     <input type="password" placeholder="Enter Password" id="password" required>
-                    <button type="submit">Login</button>
+                    <button type="submit">Login as Attendant</button>
+                    <button type="submit">Login as Admin</button>
                 </div>
                 <div class="form-forgot"><small>Forgot Password?</small></div>
             </form>
