[Chore #161172398] Add Page Links

--- a/ui/all-attendants.html
+++ b/ui/all-attendants.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>StoreManager - Records</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>StoreManager - Attendants</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +13,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button onclick="location.href='login.html';">LOG OUT</button>
+        <button onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
@@ -29,7 +30,7 @@
             </div>
         </div>
         <div class="record-items-section">
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -38,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -47,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -56,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -65,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -74,7 +75,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -83,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -92,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item" onclick="location.href='attendant-profile.html';">
+            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
                 <div class="record-details">
                     <div class="record-name">ID 1</div>
                     <div class="record-details-extra">
@@ -104,10 +105,10 @@
         </div>
     </div>
     <div class="my-side-bar">
-        <div class="categories-section sidebar-option">
-                <div onclick="location.href='dashboard-admin.html';">Back to Dashboard</div>
+        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
+                <div>Back to Dashboard</div>
         </div>
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='new-attendant.html';">
             <div>Create New Attendant</div>
         </div>
     </div>
