--- a/ui/products-admin.html
+++ b/ui/products-admin.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>StoreManager - Products</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -13,7 +14,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button type="submit">LOG OUT</button>
+        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 <!--# MAIN SECTION-->
@@ -29,7 +30,7 @@
             </div>
         </div>
         <div class="all-products-section">
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -40,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -51,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -62,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -73,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -84,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -95,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -106,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail-admin.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -131,11 +132,11 @@
                 <div class="category-items">Home Stuff</div>
             </div>
         </div>
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
             <div>Back to Dashboard</div>
         </div>
 
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='add-product.html';">
             <div>Create New Product</div>
         </div>
     </div>
