--- a/ui/products.html
+++ b/ui/products.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>StoreManager - Products</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -13,8 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button type="submit">PROFILE</button>
-        <button type="submit">LOG OUT</button>
+        <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
+        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
@@ -31,7 +32,7 @@
             </div>
         </div>
         <div class="all-products-section">
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -42,7 +43,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -53,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -64,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -75,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -86,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -97,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -108,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-item">
+            <div class="product-item" onclick="location.href='product-detail.html';">
                 <div class="product-image"><img src="images/shopping.png"></div>
                 <div class="product-details">
                     <div class="product-name">PlayStation 4</div>
@@ -133,7 +134,7 @@
                 <div class="category-items">Home Stuff</div>
             </div>
         </div>
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
             <div>Back to Dashboard</div>
         </div>
     </div>
