--- a/ui/sale-records-admin.html
+++ b/ui/sale-records-admin.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>StoreManager - Records</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +13,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button onclick="location.href='login.html';">LOG OUT</button>
+        <button onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
