--- a/ui/sale-records-all.html
+++ b/ui/sale-records-all.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>StoreManager - Records</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -13,17 +14,17 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button type="submit">PROFILE</button>
-        <button type="submit">LOG OUT</button>
+        <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
+        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
 <!--# MAIN SECTION-->
 <div class="main-section">
     <div class="records-section">
-        <div class="dash-header">Sale Records</div>
+        <div class="dash-header">My Sale Records</div>
         <div class="record-items-section">
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='sale-record-detail.html';">
                 <div class="record-details">
                     <div class="record-name">Sale Record ID</div>
                     <div class="record-details-extra">
@@ -34,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='sale-record-detail.html';">
                 <div class="record-details">
                     <div class="record-name">Sale Record ID</div>
                     <div class="record-details-extra">
@@ -45,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='sale-record-detail.html';">
                 <div class="record-details">
                     <div class="record-name">Sale Record ID</div>
                     <div class="record-details-extra">
@@ -56,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='sale-record-detail.html';">
                 <div class="record-details">
                     <div class="record-name">Sale Record ID</div>
                     <div class="record-details-extra">
@@ -67,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='sale-record-detail.html';">
                 <div class="record-details">
                     <div class="record-name">Sale Record ID</div>
                     <div class="record-details-extra">
@@ -78,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="record-item">
+            <div class="record-item" onclick="location.href='sale-record-detail.html';">
                 <div class="record-details">
                     <div class="record-name">Sale Record ID</div>
                     <div class="record-details-extra">
@@ -92,7 +93,7 @@
         </div>
     </div>
     <div class="my-side-bar">
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
             <div>Back to Dashboard</div>
         </div>
     </div>
