--- a/ui/add-product.html
+++ b/ui/add-product.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>StoreManager - login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>StoreManager - New Product</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
@@ -13,7 +14,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button type="submit">LOG OUT</button>
+        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
@@ -21,7 +22,7 @@
 <div class="main-section login-section product-section">
     <div class="form-section">
         <div class="product-section-header">Create New Product</div>
-        <div class="product-form">
+        <div class="product-form" id="add-product-form">
             <form action="#">
                 <div class="container">
                     <label for="pname" class="my-form-extra">Product Name:</label>
@@ -57,11 +58,11 @@
     </div>
 
     <div class="my-side-bar product-side-bar">
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
             <div>Back to Dashboard</div>
         </div>
 
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='products-admin.html';">
             <div>Back to Products</div>
         </div>
     </div>
