--- a/ui/cart.html
+++ b/ui/cart.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>StoreManager - Cart</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -15,8 +16,8 @@
     <div class="nav-menu">
         <!--<div class="nav-menu-item">Profile</div>-->
         <!--<div class="nav-menu-item">Records</div>-->
-        <button type="submit">PROFILE</button>
-        <button type="submit">LOG OUT</button>
+        <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
+        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
@@ -89,11 +90,11 @@
     </div>
 
     <div class="my-side-bar product-side-bar">
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
             <div>Back to Dashboard</div>
         </div>
 
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='products.html';">
             <div>Back to Products</div>
         </div>
 
