--- a/ui/dashboard-attendant.html
+++ b/ui/dashboard-attendant.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>StoreManager - Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>StoreManager - Attendant</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -12,29 +13,27 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <!--<div class="nav-menu-item">Profile</div>-->
-        <!--<div class="nav-menu-item">Records</div>-->
-        <button type="submit">PROFILE</button>
-        <button type="submit">LOG OUT</button>
+        <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
+        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
 <!--# MAIN SECTION-->
 <div class="main-section">
     <div class="dashboard-section">
-        <div class="dash-header">Dashboard | Store Attendant</div>
+        <div class="dash-header">Dashboard - Store Attendant</div>
         <div class="dash-components">
-            <div class="dash-component">
+            <div class="dash-component" onclick="location.href='products.html';">
                 <div class="dash-component-icon"><img src="images/shopping-bag.png"></div>
                 <div class="dash-component-title">Products</div>
                 <div class="dash-component-help">View and add Products to Shopping Cart.</div>
             </div>
-            <div class="dash-component">
+            <div class="dash-component" onclick="location.href='cart.html';">
                 <div class="dash-component-icon"><img src="images/shopping-cart.png"></div>
                 <div class="dash-component-title">Shopping Cart</div>
                 <div class="dash-component-help">View and modify products in Shopping Cart.</div>
             </div>
-            <div class="dash-component">
+            <div class="dash-component" onclick="location.href='sale-records-all.html';">
                 <div class="dash-component-icon"><img src="images/sale-report.png"></div>
                 <div class="dash-component-title">Records</div>
                 <div class="dash-component-help">View My Sales Records.</div>
