--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>StoreManager - login</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -25,8 +26,8 @@
                     <input type="text" placeholder="Enter Username" id="username" required>
                     <label for="password" class="my-form-extra">Password</label>
                     <input type="password" placeholder="Enter Password" id="password" required>
-                    <button type="submit">Login as Attendant</button>
-                    <button type="submit">Login as Admin</button>
+                    <button type="submit" onclick="location.href='dashboard-attendant.html';">Login as Attendant</button>
+                    <button type="submit" onclick="location.href='dashboard-admin.html';">Login as Admin</button>
                 </div>
                 <div class="form-forgot"><small>Forgot Password?</small></div>
             </form>
