--- a/ui/product-detail.html
+++ b/ui/product-detail.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>StoreManager - login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>StoreManager - Product Detail</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
@@ -13,10 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <!--<div class="nav-menu-item">Profile</div>-->
-        <!--<div class="nav-menu-item">Records</div>-->
-        <button type="submit">PROFILE</button>
-        <button type="submit">LOG OUT</button>
+        <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
+        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
     </div>
 </div>
 
@@ -49,11 +48,11 @@
     </div>
 
     <div class="my-side-bar product-side-bar">
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
             <div>Back to Dashboard</div>
         </div>
 
-        <div class="categories-section sidebar-option">
+        <div class="categories-section sidebar-option" onclick="location.href='products.html';">
             <div>Back to Products</div>
         </div>
     </div>
