--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
     <div class="form-section">
         <div class="form-header">Welcome, Log In</div>
         <div class="my-form">
-            <form action="#">
+            <form action="#" id="form1">
                 <div class="container">
                     <label for="username" class="my-form-extra">Username</label>
                     <input type="text" placeholder="Enter Username" id="username" required>
                     <label for="password" class="my-form-extra">Password</label>
                     <input type="password" placeholder="Enter Password" id="password" required>
-                    <button type="submit" onclick="location.href='dashboard-attendant.html';">Login as Attendant</button>
-                    <button type="submit" onclick="location.href='dashboard-admin.html';">Login as Admin</button>
+                    <button type="button" value="Submit"
+                            id="login-button" onclick="loginUser()">Login</button>
                 </div>
                 <div class="form-forgot"><small>Forgot Password?</small></div>
             </form>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
@@ -40,6 +41,7 @@
         &copy; Copyright 2018 Store Manager
     </footer>
 </div>
+<script src="js/app.js"></script>
 
 </body>
 </html>
