--- a/all-attendants.html
+++ b/all-attendants.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body onload="getAllAttendants()">
 <!--# NAVIGATION BAR-->
 <div class="nav-container">
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
@@ -29,80 +29,7 @@
                 <button type="submit" class="my-search-button">Search</button>
             </div>
         </div>
-        <div class="record-items-section">
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-            <div class="record-item" onclick="location.href='attendant-detail-admin.html';">
-                <div class="record-details">
-                    <div class="record-name">ID 1</div>
-                    <div class="record-details-extra">
-                        <div class="product-price">John Quest</div>
-                        <div class="product-price">Date Added: 30-12-2018</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="record-items-section" id="my-users-list"></div>
     </div>
     <div class="my-side-bar">
         <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
@@ -119,5 +46,6 @@
         &copy; Copyright 2018 Store Manager
     </footer>
 </div>
+<script src="js/app.js"></script>
 </body>
 </html>
