--- a/categories-admin.html
+++ b/categories-admin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="getAllProducts()">
+<body onload="getAllCategories()">
 <!--# NAVIGATION BAR-->
 <div class="nav-container">
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
@@ -70,6 +70,6 @@
         &copy; Copyright 2018 Store Manager
     </footer>
 </div>
-<script src="js/products.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
