[Feature #161865937] Integrate update category button with categories PUT endpoint

--- a/category-detail.html
+++ b/category-detail.html
@@ -32,7 +32,7 @@
                     <input type="text" value="Playstation 4" id="c_desc">
 
                     <div class="product-options">
-                        <button type="button" value="Submit">Update</button>
+                        <button type="button" value="Submit" onclick="updateCategory()">Update</button>
                         <button type="button" value="Submit">Delete</button>
                     </div>
                 </div>
@@ -49,6 +49,7 @@
             <div>Back to Categories</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
