[Feature #161865937] Integrate delete category button with categories DELETE endpoint

--- a/category-detail.html
+++ b/category-detail.html
@@ -33,7 +33,7 @@
 
                     <div class="product-options">
                         <button type="button" value="Submit" onclick="updateCategory()">Update</button>
-                        <button type="button" value="Submit">Delete</button>
+                        <button type="button" value="Submit" onclick="deleteCategory()">Delete</button>
                     </div>
                 </div>
             </form>
