--- a/add-product.html
+++ b/add-product.html
@@ -23,10 +23,13 @@
     <div class="form-section">
         <div class="product-section-header">Create New Product</div>
         <div class="product-form" id="add-product-form">
-            <form action="#">
+            <form action="#" id="product-form">
                 <div class="container">
-                    <label for="pname" class="my-form-extra">Product Name:</label>
-                    <input type="text" placeholder="Enter Name of Product" id="pname">
+                    <label for="p_name" class="my-form-extra">Product Name:</label>
+                    <input type="text" placeholder="Enter Name of Product" id="p_name">
+
+                    <label for="p_desc" class="my-form-extra">Product Description:</label>
+                    <input type="text" placeholder="Enter Product Description" id="p_desc">
 
                     <label for="p_price" class="my-form-extra">Price Per Unit:</label>
                     <input type="text"  placeholder="Enter Price for Product" id="p_price">
@@ -37,26 +40,15 @@
                     <label for="p_stock_min" class="my-form-extra">Stock Minimum Allowed:</label>
                     <input type="text" placeholder="Enter Minimum Quantity allowed" id="p_stock_min">
 
-                    <label for="myList" class="my-form-extra">Select Category For Product:</label>
-                    <fieldset>
-                        <select id = "myList">
-                            <option value = "1">Home</option>
-                            <option value = "2">Gaming</option>
-                            <option value = "3">Office</option>
-                            <option value = "4">Furniture</option>
-                            <option value = "4">Fashion</option>
-                        </select>
-                    </fieldset>
-
+                    <label for="p_category" class="my-form-extra">Product Category:</label>
+                    <input type="text" placeholder="Enter Category" id="p_category">
                     <div class="product-options">
-                        <button type="submit" id="create-product">Create Product</button>
-                        <!--<button type="submit" id="delete-product">Delete</button>-->
+                        <button type="button" value="Submit" onclick="addProduct()">Create Product</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
-
     <div class="my-side-bar product-side-bar">
         <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
             <div>Back to Dashboard</div>
@@ -66,6 +58,7 @@
             <div>Back to Products</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
@@ -73,6 +66,6 @@
         &copy; Copyright 2018 Store Manager
     </footer>
 </div>
-
+<script src="js/app.js"></script>
 </body>
 </html>
